2015-03-04  Richard Sandiford  <richard.sandiford@arm.com>

	PR gas/17843
	* config/tc-aarch64.c (process_movw_reloc_info): Allow
	R_AARCH64_TLSLE_MOVW_TPREL_G0_NC and R_AARCH64_TLSLE_MOVW_TPREL_G1_NC
	for MOVK.

2015-02-28  Alan Modra  <amodra@gmail.com>

	* write.c (SUB_SEGMENT_ALIGN): Don't pad non-code sections at
	end to their alignment.

2015-02-19  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* config/tc-aarch64.c (reloc_table_entry): Generate
	BFD_RELOC_AARCH64_TLSDESC_ADR_PREL21.
	(md_apply_fix, aarch64_force_relocation): Handle
	BFD_RELOC_AARCH64_TLSGD_ADR_PREL21.

2015-02-19  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* config/tc-aarch64.c (reloc_table_entry): Generate
	BFD_RELOC_AARCH64_TLSGD_ADR_PREL21.
	(md_apply_fix, aarch64_force_relocation): Handle
	BFD_RELOC_AARCH64_TLSGD_ADR_PREL21.

2015-02-19  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* config/tc-aarch64.c (reloc_table_entry): Generate
	BFD_RELOC_AARCH64_TLSIE_LD_GOTTPREL_PREL19.
	(md_apply_fix, aarch64_force_relocation): Handle
	BFD_RELOC_AARCH64_TLSIE_LD_GOTTPREL_PREL19.

2015-02-26  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* config/tc-aarch64.c (reloc_table_entry): Add ld_literal_type.
	(reloc_table): Likewise.
	(parse_address_main): Use ld_literal_type.

2015-02-26  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* config/tc-aarch64.c (reloc_table_entry): Add adr_type.
	(reloc_table): Likewise.
	(parse_address_main): Use adr_type.

2015-02-26  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* config/tc-aarch64.c (aarch64_arch_any, aarch64_arch_node): Remove.

2015-02-25  Andrew Burgess  <andrew.burgess@embecosm.com>

	* config/tc-avr.c: Add elf32-avr.h include.
	(struct avr_property_record_link): New structure.
	(avr_output_property_section_header): New function.
	(avr_record_size): New function.
	(avr_output_property_record): New function.
	(avr_create_property_section): New function.
	(avr_handle_align): New function.
	(exclude_section_from_property_tables): New function.